added basic Login Screen with TextField an single Button

--- a/Configurations/Styleguide/Sources/Styleguide/Resources/Localization/Localization.strings
+++ b/Configurations/Styleguide/Sources/Styleguide/Resources/Localization/Localization.strings
@@ -1,4 +1,6 @@
-"test" = "test";
-"newValue" = "newValue";
-"test2" = "test2";
-"test3" = "test3";
+"login" = "Login";
+"login_screen_main_text" = "Logge dich mit deinen RoomieRadar Anmeldedaten ein.";
+"register" = "Registrieren";
+"email" = "E-Mail";
+"password" = "Passwort";
+"roomie_radar" = "RoomieRadar";
